--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "Tools to Build library for vue2、vue3、react&lt;17、utils，using gulp、babel、rollup",
   "main": "index.js",
   "scripts": {
+    "prettier": "prettier --write .",
+    "eslint": "eslint . --ext .jsx,.js,.tsx,.ts",
+    "eslint:fix": "eslint . --ext .jsx,.js,.tsx,.ts --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,9 +30,27 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "husky": "^6.0.0"
+    "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "@typescript-eslint/parser": "^4.28.1",
+    "eslint": "^7.29.0",
+    "eslint-config-ali": "^12.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.4"
   },
   "hooks": {
     "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+  },
+  "lint-staged": {
+    "*.{jsx,js,tsx,ts,md,mdx,css,less,html}": [
+      "prettier --write"
+    ],
+    "*.{jsx,js,tsx,ts}": [
+      "eslint --cache --fix"
+    ]
   }
 }
