--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
     "name": "@wont/tools",
     "version": "1.0.0",
     "description": "Tools to Build library for vue2、vue3、react&lt;17、utils，using gulp、babel、rollup",
-    "main": "index.js",
+    "main": "lib/index.js",
+    "bin": {
+        "wont-tools": "lib/index.js"
+    },
     "scripts": {
+        "link": "npm run prepublishOnly && npm link",
+        "prepublishOnly": "tsc",
         "prettier": "prettier --write .",
         "eslint": "eslint . --ext .jsx,.js,.tsx,.ts",
         "eslint:fix": "eslint . --ext .jsx,.js,.tsx,.ts --fix",
@@ -32,6 +37,7 @@
         "@commitlint/config-conventional": "^12.1.4",
         "@typescript-eslint/eslint-plugin": "^4.28.1",
         "@typescript-eslint/parser": "^4.28.1",
+        "chalk": "^4.1.1",
         "eslint": "^7.29.0",
         "eslint-config-ali": "^12.1.0",
         "eslint-config-prettier": "^8.3.0",
@@ -41,6 +47,21 @@
         "lint-staged": "^11.0.0",
         "prettier": "^2.3.2",
         "typescript": "^4.3.4"
+    },
+    "dependencies": {
+        "@babel/core": "^7.14.6",
+        "@babel/plugin-transform-runtime": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
+        "@babel/preset-typescript": "^7.14.5",
+        "@types/gulp": "^4.0.8",
+        "commander": "^8.0.0",
+        "glob": "^7.1.7",
+        "gulp": "^4.0.2",
+        "gulp-autoprefixer": "^8.0.0",
+        "gulp-babel": "^8.0.0",
+        "gulp-cssnano": "^2.1.3",
+        "gulp-less": "^5.0.0",
+        "less": "^4.1.1"
     },
     "hooks": {
         "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
