--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
         "declaration": true,
         "removeComments": false,
         /* Strict Type-Checking Options */
-        "strict": false /* Enable all strict type-checking options. */,
+        "strict": true /* Enable all strict type-checking options. */,
         "noImplicitAny": false,
+        "noImplicitThis": false,
         // output
         "outDir": "lib",
         "baseUrl": ".",
