--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "description": "Tools to Build library for vue2、vue3、react&lt;17、utils，using gulp、babel、rollup",
     "main": "lib/index.js",
+    "types": "typings/index.d.ts",
     "bin": {
         "wont-tools": "lib/index.js"
     },
@@ -50,10 +51,8 @@
     },
     "dependencies": {
         "@babel/core": "^7.14.6",
-        "@babel/plugin-transform-runtime": "^7.14.5",
-        "@babel/preset-env": "^7.14.7",
-        "@babel/preset-typescript": "^7.14.5",
         "@types/gulp": "^4.0.8",
+        "babel-plugin-import": "^1.13.3",
         "commander": "^8.0.0",
         "glob": "^7.1.7",
         "gulp": "^4.0.2",
@@ -61,7 +60,13 @@
         "gulp-babel": "^8.0.0",
         "gulp-cssnano": "^2.1.3",
         "gulp-less": "^5.0.0",
-        "less": "^4.1.1"
+        "less": "^4.1.1",
+        "through2": "^4.0.2"
+    },
+    "peerDependencies": {
+        "@babel/plugin-transform-runtime": "^7.14.5",
+        "@babel/preset-env": "^7.14.7",
+        "@babel/preset-typescript": "^7.14.5"
     },
     "hooks": {
         "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
