--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
     },
     "dependencies": {
         "@babel/core": "^7.14.6",
+        "@rollup/plugin-babel": "^5.3.0",
+        "@rollup/plugin-commonjs": "^19.0.0",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^13.0.0",
+        "@rollup/plugin-typescript": "^8.2.1",
         "@types/gulp": "^4.0.8",
         "babel-plugin-import": "^1.13.3",
         "commander": "^8.0.0",
@@ -61,6 +66,9 @@
         "gulp-cssnano": "^2.1.3",
         "gulp-less": "^5.0.0",
         "less": "^4.1.1",
+        "rollup": "^2.52.7",
+        "rollup-plugin-less": "^1.1.3",
+        "rollup-plugin-terser": "^7.0.2",
         "through2": "^4.0.2"
     },
     "peerDependencies": {
