--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "gulp-babel": "^8.0.0",
         "gulp-cssnano": "^2.1.3",
         "gulp-less": "^5.0.0",
+        "gulp-typescript": "^6.0.0-alpha.1",
         "less": "^4.1.1",
         "rollup": "^2.52.7",
         "rollup-plugin-less": "^1.1.3",
