--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wont/tools",
-    "version": "0.0.1-alpha.5",
+    "version": "0.0.1-beta.1",
     "description": "Tools to Build library for vue2、vue3、react&lt;17、utils，using gulp、babel、rollup",
     "main": "lib/index.js",
     "types": "types/index.d.ts",
