--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
         "gulp-cssnano": "^2.1.3",
         "gulp-less": "^5.0.0",
         "less": "^4.1.1",
+        "rimraf": "2.7.1",
         "rollup": "^2.52.7",
         "rollup-plugin-less": "^1.1.3",
         "rollup-plugin-terser": "^7.0.2",
