--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@wont/tools",
-    "version": "0.0.1-beta.3",
+    "version": "0.0.1-beta.4",
     "description": "Tools to Build library for vue2、vue3、react&lt;17、utils，using gulp、babel、rollup",
     "main": "lib/index.js",
     "types": "types/index.d.ts",
@@ -13,6 +13,7 @@
         "prettier": "prettier --write .",
         "eslint": "eslint . --ext .jsx,.js,.tsx,.ts",
         "eslint:fix": "eslint . --ext .jsx,.js,.tsx,.ts --fix",
+        "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
         "bump": "bumpp package.json -c -p -t --all -x \"pnpm run changelog\"",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -50,6 +51,7 @@
         "@typescript-eslint/parser": "^4.28.1",
         "bumpp": "^9.4.1",
         "chalk": "^4.1.1",
+        "conventional-changelog-cli": "^5.0.0",
         "eslint": "^7.29.0",
         "eslint-config-ali": "^12.1.0",
         "eslint-config-prettier": "^8.3.0",
