--- a/.github/workflows/check-status.yml
+++ b/.github/workflows/check-status.yml
@@ -4,35 +4,25 @@ on: [push, pull_request]
 jobs:
   check-status:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16]
+
     steps:
       - name: checkout
         uses: actions/checkout@v2.3.1
-
-      - name: cache package-lock.json
-        uses: actions/cache@v2
+      - name: pnpm cache
+        uses: pnpm/action-setup@v2
         with:
-          path: package-temp-dir
-          key: lock-${{ github.sha }}
-
-      - name: create package-lock.json
-        run: npm i --package-lock-only
-
-      - name: hack for singe file
-        run: |
-          if [ ! -d "package-temp-dir" ]; then
-            mkdir package-temp-dir
-          fi
-          cp package-lock.json package-temp-dir
-
-      - name: cache node_modules
-        id: node_modules_cache_id
-        uses: actions/cache@v2
+          version: 8
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
         with:
-          path: node_modules
-          key: node_modules-${{ hashFiles('**/package-temp-dir/package-lock.json') }}
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
+
 
       - name: install
-        if: steps.node_modules_cache_id.outputs.cache-hit != 'true'
         run: npm ci
 
       - name: prepublishOnly
