CI: pnpm cache install

--- a/.github/workflows/check-status.yml
+++ b/.github/workflows/check-status.yml
@@ -23,7 +23,7 @@ jobs:
 
 
       - name: install
-        run: npm ci
+        run: pnpm install
 
       - name: prepublishOnly
         run: npm run prepublishOnly
